--- a/Invoice/index.html
+++ b/Invoice/index.html
@@ -6,17 +6,21 @@
 	<link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="invoice.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" ></script>
+	<script src="invoice.js" async></script>
+
 	<title>Invoice</title>
 </head>
 <body>
-	<div class="mainbody">
+	<button id="btnPdf" onclick="convertHTMLToPDF()">Convert<br>to PDFs</button>
+	<div class="mainbody" id="mainbody">
 		<div class="headerLeft">
 			<br>
 			<label class="button"> DUE </label> &nbsp;&nbsp;
 			<label id="heading">Invoice</label> &nbsp;<br><br><br>
-			<label class="textBox">Thank you for your purchase. Timely payment will be appreciated.
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+			<input type="text" class="textBox" disabled value="Thank you for your purchase. Timely payment will be appreciated.">
+			
 			<br><br><br>
 			<div class="headerLeft">
 				<b>Invoice No.</b><br>
@@ -31,15 +35,18 @@
 		</div>
 		<div class="headerRight">
 			<br>
-			<img src="logo.png" class="logo"> 
+			<img 
+			src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTo4zjT9tsN_KSjufbGJuwz1o0BvLOI1aN1_g&usqp=CAU" 
+			class="logo"> 
 			<br><br>
 			<b>Currency</b> <br>
-			<select class="currency">
-				<option> --- Select ---</option>
-				<option> Indian Rupee - INR</option>
-				<option> Euro - EUR</option>
-				<option> Singapore dollar - SGD</option>
-				<option> British Pound - GBP</option>
+			<select class="currency" id="currency">
+				<option> -- Select -- </option>
+				<option value="GBP"> British Pound - GBP</option>
+				<option value="INR"> Indian Rupee - INR</option>
+				<option value="EUR"> Euro - EUR</option>
+				<option value="SGD"> Singapore dollar - SGD</option>
+				
 			</select>
 		</div>
 		<br><br><br><br><br><br><br><br><br><br><br>
@@ -75,46 +82,66 @@
 
 		<!--- Product Table --->
 		<div>
-			<table cellpadding="0"  cellspacing="0" >
+			<table cellpadding="0"  cellspacing="0" id="ptable" class="ptable">
 				<tr>
 					<th>Name</th>
 					<th>Quantity</th>
 					<th>Rate</th>
 					<th>Amount</th>
+					<th></th>
 				</tr>
-				<tr>
-					<td class="product"><input type="text" placeholder="Item Name"> 
-						<button class="clone"><i class="fa fa-files-o"></i> </button>
+				<tr id="items" class="items">
+					<td class="product">
+						<input type="text" placeholder="Item Name" id="name"> 
+						<button class="clone" id="clone" onclick="cloneRow()">
+							<i class="fa fa-files-o"></i> 
+						</button>
 					</td>
-					<td style="width:10%"><input type="number" min=1 style="width:90%"></td>
-					<td style="width:10%"><input type="text" style="width:90%"></td>
-					<td style="width:20%" ><label > 
-						<label id="curr">GBP</label> 
-						<label id="rowAmt"> 1000.00</label> </label> 
+					<td style="width:10%" id="qtd">
+						<input type="number" min=1 style="width:90%" id="qty"
+						class="qty" value="1" onchange="updateRowAmount()"></td>
+					<td style="width:10%" id="ptd"><input type="text" style="width:90%" id="price" 
+						class="price" value="0.00" onkeyup="updateRowAmount()"></td>
+					<td style="width:20%" id="rtd">
+						<label id="curr" class="curr">--</label> 
+						<input type="text" id="rowAmt" value="00.00" class="rowAmt" disabled> 
+					</td>
+					<td> 
+						<button class="remove" id="remove" onclick="removeRow()">X</button>
 					</td>
 				</tr>
 			</table>
 		</div>
+		<hr>
 		<div style="width:100%">
 			<div class="divLeft"> 
-				<button class="newLine">New Line</button> 
+				<button class="newLine" id="new" onclick="newLine()">New Line</button> 
 			</div>
 			<div class="divRight">
-				Sub Total  <label id="subtotal">10000.00</label><br>
+				Sub Total  <label id="subtotal">00.00</label><br>
 				<hr>
-				<label class="taxBox"> Value Added Tax &nbsp;&nbsp;<input type="text" id="per" value="10">%  <label id="tax">100.00</label>
+				<label class="taxBox"> Value Added Tax &nbsp;&nbsp; |
+					<input type="text" id="per" value="10" onkeyup="updateTax()">%  <label id="tax">00.00</label>
 				</label><br>
 				<hr>
-				<b>Total  <label id="total">1100.00</label> </b><br>
+				<b>Total  <label id="total">00.00</label> </b><br>
 				<div class="btnTotal">
 					<label id="btnText"> Total Due</label>
-					<label class="btn"> <label id="btnCurr">GBP</label> 
-					<label id="btnAmt"> 1000.00</label> </label>  <br>
+					<label class="btn"> <label id="btnCurr">--</label> 
+					<label id="btnAmt"> 00.00</label> </label>  <br>
 				</div>
 			</div>
-			<br><br><br><br><br><br><br><br><br><br><br><hr>
+			<br><br><br><br><br><br><br><br><br><br>
 		</div>
-
+		
 	</div>
+	
 </body>
+
+ <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script> -->
+
+
+
 </html>
