Invoice Currency Conversion

--- a/Invoice/index.html
+++ b/Invoice/index.html
@@ -13,7 +13,7 @@
 	<title>Invoice</title>
 </head>
 <body>
-	<button id="btnPdf" onclick="convertHTMLToPDF()">Convert<br>to PDFs</button>
+	<button id="btnPdf" onclick="convertHTMLToPDF()">Convert<br>to PDF</button>
 	<div class="mainbody" id="mainbody">
 		<div class="headerLeft">
 			<br>
@@ -136,5 +136,11 @@
 	</div>
 	
 </body>
+
+ <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script> -->
+
+
 
 </html>
