--- a/Invoice/index.html
+++ b/Invoice/index.html
@@ -102,7 +102,7 @@
 					<td style="width:10%" id="ptd"><input type="text" style="width:90%" id="price" 
 						class="price" value="0.00" onkeyup="updateRowAmount()"></td>
 					<td style="width:20%" id="rtd">
-						<label id="curr" class="curr">--</label> 
+						<label id="curr" class="curr">INR</label> 
 						<input type="text" id="rowAmt" value="00.00" class="rowAmt" disabled> 
 					</td>
 					<td> 
@@ -126,7 +126,7 @@
 				<b>Total  <label id="total">00.00</label> </b><br>
 				<div class="btnTotal">
 					<label id="btnText"> Total Due</label>
-					<label class="btn"> <label id="btnCurr">--</label> 
+					<label class="btn"> <label id="btnCurr">INR</label> 
 					<label id="btnAmt"> 00.00</label> </label>  <br>
 				</div>
 			</div>
