--- a/Practice/prompt.html
+++ b/Practice/prompt.html
@@ -1,20 +1,20 @@
 <html>
+
 <head>
-<title>My Javascript Page</title>
+    <title>My Javascript Page</title>
 </head>
 
 <body>
-<script>
-username=prompt("Please enter your name","Enter your name here"); 
+    <script>
+        username = prompt("Please enter your name", "Enter your name here");
 
-if (confirm("Do you want to print your Name??")) 
-{
-document.write (username);
-}
-else
-{
-	document.write  ("You do not agree");
-}
-</script>
+        if (confirm("Do you want to print your Name??")) {
+            document.write(username);
+        }
+        else {
+            document.write("You do not agree");
+        }
+    </script>
 </body>
+
 </html>
