28th Feb Practice

--- a/Practice/presentation/index.html
+++ b/Practice/presentation/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Presentation</title>
+        <title>jQuery Selectors</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="events.js" ></script>
     </head>
     <body>
-        <h1>jQuery Selectors</h1>
+         <h1>jQuery Selectors</h1>
+        <div class="box">
+            
+            <ul>
+                <li id="ele"> This is li. </li>
+                <li class="green" id="ele"> This is li with green class </li>
+                <li class="red" id="ele"> This is li with red class </li>
+                <li class="green" id="ele"> This is li with green class </li>
+                <li class="green red" id="ele"> This is li with green and red class </li>
+                <li>This is simple li</li>
+            </ul>
+        </div> 
+
+        <h1><a href="event.html">Events</a></h1>
+
     </body>
 </html>
