28th Feb Practice

--- a/Practice/presentation/event.html
+++ b/Practice/presentation/event.html
@@ -18,7 +18,7 @@
 
         <h2>Events</h2>
         <ul class="elist">
-            <li><a href="click.html">Click</a></li>
+            <li><a href="#">Click</a></li>
             <li><a href="mouse.html">Mouse</a></li>
             <li><a href="keyboard.html">Keyboard</a></li>
             <li><a href="form.html">Form/Input</a></li>
