28th Feb Practice

--- a/Practice/presentation/docEvents.html
+++ b/Practice/presentation/docEvents.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <title>Documents / Window Events</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="events.js" ></script>
     </head>
     <body>
         <h1>Document / Window Events</h1>
-        <h3>Size : </h3> <label id="size"> </label>
-        <h3>Scroll : </h3> <label id="scroll"> </label>
-        <h3>load : </h3> <label id="load"> </label>
+        <h3>Resize count : <label id="size"> </label> </h3>
+        <h3>Scroll : <label id="scroll"> </label></h3>
+        <h3>load :  <label id="load"> </label></h3>
     </body>
 </html>
