1st March Practice

--- a/Practice/presentation/form.html
+++ b/Practice/presentation/form.html
@@ -7,6 +7,23 @@
         <script src="events.js" ></script>
     </head>
     <body>
-        
+        <h1>Form/Input Events</h1><br>
+        <center>
+            <form id="frm">
+                Type here Something : <input type="text" id="txt">
+                <span id="txtError"> </span><br>
+                <br><br>
+                Select color to change background:
+                <select id="clr">
+                    <option value="-- Select --"></option>
+                    <option value="bisque">Bisque</option>
+                    <option value="skyblue">Sky blue</option>
+                    <option value="thisle">Thisle</option>
+                    <option value="palegreen">Pale Green</option>
+                    <option value="teal">Teal</option>
+                </select><br><br>
+                <br><input type="submit" >
+            </form>
+        </center>
     </body>
 </html>
