--- a/Practice/presentation/keyboard.html
+++ b/Practice/presentation/keyboard.html
@@ -7,6 +7,12 @@
         <script src="events.js" ></script>
     </head>
     <body>
-        
+        <h1>Keyboard Events</h1>
+        <h3>KeyUP : </h3>
+        <input type="text" id="keyu"> <label id="keyuOut"></label>
+        <h3>KeyDown : </h3>
+        <input type="text" id="keyd"> <label id="keydOut"></label>
+        <h3>KeyPress : </h3>
+        <input type="text" id="keyp"> <label id="keypOut"></label>
     </body>
 </html>
